<resources>
    <string name="app_name">Complete The Number</string>
    <string name="exit">EXIT</string>
    <string name="start_game">START GAME</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">PROFILE</string>
    <string name="watch_ad">WATCH AD</string>
    <string name="time_over">Time over!</string>
    <string name="main_menu">MAIN MENU</string>
</resources>