<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_img"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_start_game"
            style="@style/MenuButton"
            android:background="@drawable/menu_button"
            android:text="@string/start_game" />
        <!--        <Button-->
        <!--            android:id="@+id/btn_leaderboard"-->
        <!--            style="@style/MenuButton"-->
        <!--            android:background="@drawable/menu_button"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/leaderboard"/>-->
        <Button
            android:id="@+id/btn_profile"
            style="@style/MenuButton"
            android:background="@drawable/menu_button"
            android:layout_marginTop="10dp"
            android:text="@string/profile" />

        <Button
            android:id="@+id/btn_settings"
            style="@style/MenuButton"
            android:background="@drawable/menu_button"
            android:layout_marginTop="10dp"
            android:text="@string/settings" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/MenuButton"
            android:background="@drawable/menu_button"
            android:layout_marginTop="10dp"
            android:text="@string/exit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>